--- a/Clasifikasi_kualitas_udara.ipynb
+++ b/Clasifikasi_kualitas_udara.ipynb
@@ -15,6 +15,17 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "dibuat oleh: <br>\n",
+        "Wawan Hermawan 2106144 <br>\n",
+        "Bagus Slamet 2106102"
+      ],
+      "metadata": {
+        "id": "xv3Y1oPerFeB"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -910,6 +921,13 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "mK3KPhisrBtm"
+      }
     },
     {
       "cell_type": "markdown",
